--- a/wiki/MockwireQuickStart.wiki
+++ b/wiki/MockwireQuickStart.wiki
@@ -39,7 +39,14 @@ And controlled dependencies of the code to test, e.g.
 SomeInterface thatSomeConcreteClassNeeds;
 }}}
 
+= Fest Assertions =
+
+If you are unfamiliar with [http://code.google.com/p/fest/ Fest Assertions] you should rectify that soon. Its a fluent api for assertions in tests and makes writing tests obvious.
+
 = Example unit test =
+
+In this example a *Unit* of code defined in this case by an inner class is blessed into the test context. Several asserts are defined in a test method to verify
+the unit of code.
 
 {{{
 @RunWith(MockwireRunner.class)
@@ -64,6 +71,8 @@ public class UnitTest {
     assertThat(unit.echo(false)).isFalse();
   }
 }}}
+
+[http://code.google.com/p/stickycode/source/browse/trunk/net.stickycode.examples/sticky-example-mockwire/src/test/java/net/stickycode/example/mockwire/UnitTest.java Code sample]
 
 = Example unit test with interdependencies =
 
@@ -99,3 +108,5 @@ public class UnitDependenciesTest {
   }
 }
 }}}
+
+[http://code.google.com/p/stickycode/source/browse/trunk/net.stickycode.examples/sticky-example-mockwire/src/test/java/net/stickycode/example/mockwire/UnitDependenciesTest.java Code sample]
