--- a/wiki/License.wiki
+++ b/wiki/License.wiki
@@ -2,7 +2,7 @@
 
 = License =
 
-Copyright (c) 2010 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved.
+Copyright (c) 2010 RedEngine Ltd, http://www.RedEngine.co.nz/ All rights reserved.
 
 This program is licensed to you under the Apache License Version 2.0,
 and you may not use this file except in compliance with the Apache License Version 2.0.
