--- a/wiki/LoggingComposition.wiki
+++ b/wiki/LoggingComposition.wiki
@@ -8,6 +8,8 @@
 StickyCode defines two compositions one for anything that needs to log which essentially just pulls in slf4j-api and because jcl still seems very common it pulls in the jcl to slf4j adapter.
 
 It is safe to use the range as if a breaking change is made the version will be bumped.
+
+== Logging Api ==
 {{{
 <dependency>
   <groupId>net.stickycode.composition</groupId>
@@ -25,6 +27,19 @@ This logging implementation uses logback. Its used by Mockwire and UnittestingCo
   <groupId>net.stickycode.composition</groupId>
   <artifactId>sticky-composition-logging-deploy</artifactId>
   <version>[1,2)</version>
+</dependency>
+}}}
+
+== Actual Logging ==
+
+You are free to choose any of the implementations of logging which have slf4j binders.
+
+e.g.
+{{{
+<dependency>
+  <groupId>org.slf4j</groupId>
+  <artifactId>slf4j-log4j</artifactId>
+  <version>1.6.0</version>
 </dependency>
 }}}
 
