--- a/wiki/MockwireQuickStart.wiki
+++ b/wiki/MockwireQuickStart.wiki
@@ -54,71 +54,8 @@ See UnitTestingComposition which defines the libraries used and what they do.
 
 = Example unit test =
 
-In this example a *Unit* of code defined in this case by an inner class is blessed into the test context. Several asserts are defined in a test method to verify
-the unit of code.
+MockwireHelloWorld
 
-{{{
-@RunWith(MockwireRunner.class)
-public class UnitTest {
-
-  /**
-   * A unit of code to be tested
-   */
-  static class Unit {
-    public boolean echo(boolean echo) {
-      return echo;
-    }
-  }
-
-  @Bless
-  Unit unit;
-
-  @Test
-  public void simple() {
-    assertThat(unit).isNotNull();
-    assertThat(unit.echo(true)).isTrue();
-    assertThat(unit.echo(false)).isFalse();
-  }
-}}}
-
-[http://code.google.com/p/stickycode/source/browse/trunk/net.stickycode.examples/sticky-example-mockwire/src/test/java/net/stickycode/example/mockwire/UnitTest.java Code sample]
-
-= Example unit test with interdependencies =
-
-{{{
-@RunWith(MockwireRunner.class)
-public class UnitDependenciesTest {
-
-  public interface Dependency {
-    void call();
-  }
-
-  static class Unit {
-    @Inject
-    Dependency dependency;
-    public void call() {
-      dependency.call();
-    }
-  }
-
-  @Bless
-  Unit unit;
-
-  @Mock
-  Dependency mocked;
-
-  @Test
-  public void simple() {
-    assertThat(unit).isNotNull();
-    assertThat(unit.dependency).isNotNull();
-    
-    unit.call();
-    verify(mocked).call();
-  }
-}
-}}}
-
-[http://code.google.com/p/stickycode/source/browse/trunk/net.stickycode.examples/sticky-example-mockwire/src/test/java/net/stickycode/example/mockwire/UnitDependenciesTest.java Code sample]
 
 = Check out the example and try it for yourself =
 
