--- a/wiki/MockwireDecentExample.wiki
+++ b/wiki/MockwireDecentExample.wiki
@@ -1,6 +1,6 @@
 #summary Example with some wiring
 
-== Test a cumulator server wrapping a data repository ==
+== Test a cumulative service wrapping a data repository ==
 
 The key thing to take away from this is that there is very little boiler plate (if any) to wire up the CumulatorService with a Repository. The tests are very clean an obvious in there intent and execution.
 
