--- a/wiki/CompositionVersioning.wiki
+++ b/wiki/CompositionVersioning.wiki
@@ -2,31 +2,31 @@
 
 = Introduction =
 
-When using third party libraries is is useful to have control, esp in a world of weakly defined dependencies as seen in maven central.
+When using third party libraries is is useful to have control over the actual versions that you use, esp in a world of weakly defined dependencies as seen in maven central.
 
 == Weak dependencies ==
-They are weak because they don't use ranges. When you say i want version 2.4 in maven that means something like 2.4 if a project closer defines a version 3.2 then that wins.
 
+They are weak because they don't use ranges. When you say I want version 2.4 in maven that means *something like 2.4*, if a project closer in the transitive tree defines a version 3.2 then that wins.
+
+For example because A's dependency on D is closer that D's it wins conflict resolution.
 {{{
-A -> B -> C 
-C -> D 2.4
+A -> B -> C -> D 2.4
 A -> D 3.2
 }}}
 
-Because A's dependency on D is closer that D's it wins conflict resolution.
+Now if both versions were binary compatible that would be fine. But how do you know? With Ranges you can define the compatibility contracts with constraints.
 
 == Ranges ==
-In my world 2.4 and 3.2 are not compatible, so I always use ranges.
+In my world 2.4 and 3.2 are not compatible, the major version is different so thinks like deprecated methods might be gone, so I always use ranges.
 
 {{{
-A -> B -> C
-C -> D [2,3)
+A -> B -> C -> D [2,3)
 A -> D [3,4)
 }}}
 
-This results in a conflict and maven will refuse to resolve the tree for A because 2 and 3 versions of D cannot exist together.
+This results in a conflict when maven resolves the tree. A version of D cannot be selected that satisfies all the constraints. 
 
-I use compositions to hold fixed ranges for third party projects and provide a new version lifecycle to use in closer projects.
+I use compositions to hold fixed ranges for third party projects and provide a new version lifecycle to use in closer projects. 
 
 For example 
 
@@ -34,7 +34,7 @@ For example
 sticky-composite-spring25-1.5 -> spring-context [2.5.6]
 }}}
 
-The square brackets define the range from 2.5.6 to 2.5.6 i.e. only that version is allowed. Now everything that needs spring25 depends on the composite.
+The square brackets define the range from 2.5.6 to 2.5.6 i.e. only that version is allowed. Now update everything that needs spring25 to depend on the composite. 
 
 == Non breaking upstream updates ==
 If 2.5.7 comes out and testing shows its fully compatible then sticky-composite-spring25 can be released again
