--- a/wiki/MockwireDependency.wiki
+++ b/wiki/MockwireDependency.wiki
@@ -1,10 +1,10 @@
 #summary Mockwire dependency
 
-= Central =
+= Central Repository =
 
 Mockwire can be found in the Central maven repository.
 
-The default setup leverages junit4, mockito and fest plus your choice of dependency container.
+The default setup leverages junit4, mockito and fest plus your choice of dependency container. 
 
 = For Spring 2.5.X =
 {{{
