--- a/wiki/StickyWaitPlugin.wiki
+++ b/wiki/StickyWaitPlugin.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-When using jetty to run a built war for integration testing it is often useful to run the war and then look at it interactively. Using the daemon mode works but you get errors.
+When using jetty (or something other) to run a built war for integration testing it is often useful to run the war and then look at it interactively. Using the daemon mode works but you get errors.
 
 Include the wait plugin like so
 
@@ -24,6 +24,7 @@ Include the wait plugin like so
 }}}
 
 Will give you this when you run {{{mvn verify}}}
-  [INFO] 
+
   [INFO] --- sticky-wait-plugin:1.3:wait (default) @ sticky-helloworld-  ws-deploy ---
+
   Press ENTER key to continue...
