--- a/wiki/StickyWaitPlugin.wiki
+++ b/wiki/StickyWaitPlugin.wiki
@@ -28,3 +28,22 @@ Will give you this when you run {{{mvn verify}}}
   [INFO] --- sticky-wait-plugin:1.3:wait (default) @ sticky-helloworld-  ws-deploy ---
 
   Press ENTER key to continue...
+
+= Custom messages =
+
+If you want a custom prompt message you can configure it like so...                   
+{{{
+ <configuration>
+  <promptMessage>I'm running on  http://localhost:8080/${project.artifactId}/, press ENTER to shutdown..</promptMessage>
+ </configuration>
+}}}
+
+
+= Timeouts =
+
+If you just want the service to stay up for a specified period of time you can configure it in milliseconds like this
+{{{
+ <configuration>
+  <timeout>5000</timeout>
+ </configuration>
+}}}
